--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@upstash/redis": "^1.35.0",
     "@xenova/transformers": "^2.17.2",
     "cors": "^2.8.5",
     "cosine-similarity": "^1.0.1",
